--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,95 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>98add779-6666-4151-9c95-f088b9522ec0</groupId>
-	<artifactId>mule-ci-cd-test</artifactId>
+	<artifactId>mule-ci-cd</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 
-	<name>mule-ci-cd-test</name>
+	<name>mule-ci-cd</name>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<app.runtime>4.9.11</app.runtime>
-		<mule.maven.plugin.version>4.6.1</mule.maven.plugin.version>
-		<munit.version>3.6.2</munit.version>
-        <argLine>-Dfile.encoding=UTF-8</argLine>
+	    <!-- Encodage & JVM -->
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	    <argLine>-Dfile.encoding=UTF-8</argLine>
+	    <java.version>17</java.version>
+	
+	    <!-- Versions techniques -->
+	    <mule.runtime.version>4.9.11</mule.runtime.version>
+	    <mule.maven.plugin.version>4.6.1</mule.maven.plugin.version>
+	    <munit.version>3.6.2</munit.version>
+	
+	    <!-- Métadonnées applicatives -->
+	    <app.name>${project.artifactId}</app.name>
+	    <!-- env logique (dev/test/prod) : par défaut dev -->
+	    <app.env>dev</app.env>
+	    <!-- nom final de l’appli sur CloudHub -->
+	    <app.fullName>${app.name}-${app.env}</app.fullName>
+	
+	    <!-- CloudHub 2.0 / RTF / cible -->
+	    <cloudhub.orgId>98add779-6666-4151-9c95-f088b9522ec0</cloudhub.orgId>
+	    <!-- pour CH2 : nom de l’environnement Anypoint -->
+	    <cloudhub.environment>dev</cloudhub.environment>
+	    <!-- target CH2 (exactement comme dans Runtime Manager) -->
+	    <cloudhub.target>Cloudhub-US-East-2</cloudhub.target>
+	    <cloudhub.replicas>1</cloudhub.replicas>
+	    <cloudhub.vCores>0.1</cloudhub.vCores>
+	    <cloudhub.generateDefaultPublicUrl>true</cloudhub.generateDefaultPublicUrl>
+	
+	    <!-- Flags CI/CD -->
+	    <skipTests>false</skipTests>
+	    <skipMunit>false</skipMunit>
 	</properties>
+
+	<profiles>
+	    <profile>
+	        <id>dev</id>
+	        <properties>
+	            <app.env>dev</app.env>
+	            <cloudhub.environment>dev</cloudhub.environment>
+	            <cloudhub.target>Cloudhub-US-East-2</cloudhub.target>
+	        </properties>
+	    </profile>
+	
+	    <profile>
+	        <id>test</id>
+	        <properties>
+	            <app.env>test</app.env>
+	            <cloudhub.environment>test</cloudhub.environment>
+	            <cloudhub.target>Cloudhub-US-East-2</cloudhub.target>
+	        </properties>
+	    </profile>
+	
+	    <profile>
+	        <id>prod</id>
+	        <properties>
+	            <app.env>prod</app.env>
+	            <cloudhub.environment>prod</cloudhub.environment>
+	            <cloudhub.target>Cloudhub-US-East-2</cloudhub.target>
+	        </properties>
+	    </profile>
+	    
+		<profile>
+		  <id>ci</id>
+		  <activation>
+		    <property>
+		      <name>env.CI</name>
+		      <value>true</value>
+		    </property>
+		  </activation>
+		  <properties>
+		    <!-- Désactive les tests JUnit classiques -->
+		    <maven.test.skip>true</maven.test.skip>
+		
+		    <!-- Désactive les tests MUnit en CI rapide (si tu veux) -->
+		    <munit.skip>true</munit.skip>
+		
+		    <!-- Uniformise l'encodage pour éviter les surprises -->
+		    <argLine>-Dfile.encoding=UTF-8</argLine>
+		  </properties>
+		</profile>
+
+	</profiles>
 
 	<build>
 		<plugins>
@@ -26,27 +101,29 @@
 				<version>3.2.0</version>
 			</plugin>
 			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-					<cloudhub2Deployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<provider>MC</provider>
-						<environment>dev</environment>
-						<target>Cloudhub-US-East-2</target>
-						<muleVersion>4.10.0</muleVersion>
-						<server>anypoint-exchange-v3</server>
-						<applicationName>mule-ci-cd-test</applicationName>
-						<replicas>1</replicas>
-						<vCores>1</vCores>
-						<deploymentSettings>
-							<generateDefaultPublicUrl>true</generateDefaultPublicUrl>
-						</deploymentSettings>
-					</cloudhub2Deployment>
-				</configuration>
+			    <groupId>org.mule.tools.maven</groupId>
+			    <artifactId>mule-maven-plugin</artifactId>
+			    <version>${mule.maven.plugin.version}</version>
+			    <extensions>true</extensions>
+			    <configuration>
+			        <cloudhub2Deployment>
+			            <uri>https://anypoint.mulesoft.com</uri>
+			            <provider>MC</provider>
+			            <!-- utilisation des propriétés -->
+			            <environment>${cloudhub.environment}</environment>
+			            <target>${cloudhub.target}</target>
+			            <muleVersion>${mule.runtime.version}</muleVersion>
+			            <server>anypoint-exchange-v3</server>
+			            <applicationName>${app.fullName}</applicationName>
+			            <replicas>${cloudhub.replicas}</replicas>
+			            <vCores>${cloudhub.vCores}</vCores>
+			            <deploymentSettings>
+			                <generateDefaultPublicUrl>${cloudhub.generateDefaultPublicUrl}</generateDefaultPublicUrl>
+			            </deploymentSettings>
+			        </cloudhub2Deployment>
+			    </configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>com.mulesoft.munit.tools</groupId>
 				<artifactId>munit-maven-plugin</artifactId>
