--- a/src/main/resources/prod.yaml
+++ b/src/main/resources/prod.yaml
@@ -1,4 +1,4 @@
-environment: "development"
+environment: "production"
 
 http:
   listener:
@@ -13,6 +13,4 @@ database:
   port: ""
   user: ""
   password: ""
-  name: "" 
-  
-  
+  name: ""
