--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 	
-	<name>mule-ci-cd-${env}</name>
+	<name>mule-ci-cd-${mule.env}</name>
 
 	<properties>	
-	    <app.name>${project.artifactId}-${env}</app.name>
+	    <app.name>${project.artifactId}-${mule.env}</app.name>
 	
 		<!-- Environnement par défaut -->
 		<mule.env>dev</mule.env>
@@ -28,7 +28,7 @@
 		
 	    <!-- CloudHub 2.0 / RTF / cible par défaut -->
 	    <cloudhub.orgId>98add779-6666-4151-9c95-f088b9522ec0</cloudhub.orgId>
-	    <cloudhub.environment>${env}</cloudhub.environment>
+	    <cloudhub.environment>${mule.env}</cloudhub.environment>
 	    <cloudhub.target>Cloudhub-US-East-2</cloudhub.target>
 	    <cloudhub.replicas>1</cloudhub.replicas>
 	    <cloudhub.vCores>0.1</cloudhub.vCores>
