--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<properties>	
 		<app.name>${project.artifactId}-${env}</app.name>	    	
 		<!-- env par défaut -->
-		<env>devv</env>
+		<env>devvv</env>
 		
 	    <!-- Encodage & JVM -->
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
