--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
 					</execution>
 				</executions>
 				<configuration>
+					<argLines>
+			            <argLine>-Xmx2048m</argLine>
+			            <argLine>-XX:MaxMetaspaceSize=512m</argLine>
+			            <argLine>-Dmule.test.timeoutSecs=180</argLine>
+			        </argLines>
 				    <!-- Lien avec profil ci -->
     				<skipMunitTests>${munit.skip}</skipMunitTests>
 					<coverage>
