--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
 						<phase>test</phase>
 						<goals>
 							<goal>test</goal>
-							<goal>coverage-report</goal>
+							<<!-- goal>coverage-report</goal> -->
 						</goals>
 					</execution>
 				</executions>
@@ -155,6 +155,17 @@
 							<format>html</format>
 						</formats>
 					</coverage>
+					<runtimeConfiguration>
+			            <discoverRuntimeVersions>true</discoverRuntimeVersions>
+			        </runtimeConfiguration>
+			        <argLines>
+			            <argLine>-Xmx2048m</argLine>
+			            <argLine>-XX:MaxMetaspaceSize=512m</argLine>
+			            <argLine>-Dmule.test.timeoutSecs=180</argLine>
+			        </argLines>
+			        <dynamicPorts>
+			            <dynamicPort>http.port</dynamicPort>
+			        </dynamicPorts>
 				</configuration>
 			</plugin>
 		</plugins>
