--- a/pom.xml
+++ b/pom.xml
@@ -202,26 +202,33 @@
 			<url>https://maven.anypoint.mulesoft.com/api/v3/maven</url>
 			<layout>default</layout>
 		</repository>
-		<repository>
+<!-- 		<repository>
 			<id>mulesoft-releases</id>
 			<name>MuleSoft Releases Repository</name>
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
-		</repository>
+		</repository> -->
 		<repository>
             <id>mulesoft-enterprise</id>
             <name>MuleSoft Enterprise Repository</name>
             <url>https://repository.mulesoft.org/nexus/content/repositories/releases-ee/</url>
         </repository>
-	    <repository>
+<!-- 	    <repository>
 	        <id>mule-public</id>
 	        <url>https://repository.mulesoft.org/nexus/content/repositories/releases/</url>
-	    </repository>        
-
+	    </repository>    -->     
+		  <repository>
+		    <id>mulesoft-public</id>
+		    <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
+		  </repository>
+		  <repository>
+		    <id>mulesoft-releases</id>
+		    <url>https://repository.mulesoft.org/nexus/content/repositories/releases/</url>
+		  </repository>
 	</repositories>
 
 	<pluginRepositories>
-		<pluginRepository>
+<!-- 		<pluginRepository>
 			<id>mulesoft-releases</id>
 			<name>MuleSoft Releases Repository</name>
 			<layout>default</layout>
@@ -233,8 +240,17 @@
 	  	<pluginRepository>
 	    	<id>mulesoft-public</id>
 	   		 <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
-	  	</pluginRepository>
-	</pluginRepositories>
+	  	</pluginRepository>-->
+	  	  <pluginRepository>
+		    <id>mulesoft-public</id>
+		    <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
+		  </pluginRepository>
+		  <pluginRepository>
+		    <id>mulesoft-releases</id>
+		    <url>https://repository.mulesoft.org/nexus/content/repositories/releases/</url>
+		  </pluginRepository>
+	</pluginRepositories> 
+	
 	<distributionManagement>
 		<repository>
 			<id>anypoint-exchange-v3</id>
